--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     </header>
     <section class="main_visual">
         <figure>
-            <img src="http://via.placeholder.com/1920X1000/333/333/?text=image" />
+            <img src="images/coffee.jpg" />
             <!-- 첫 번째333은 배경색, 두 번째 333은 글자색 -->
             <!-- 영상을 넣을 경우 오른쪽에 낳두는 것을 추천 -->
         </figure>
         <div class="title">
             <h2>MOTION GRAPHIC DESINGER</h2>
             <p>Gu Hwa Jeong</p>
-            <a href="#">유튜브 채널</a>
+            <a href="https://www.youtube.com/channel/UCmUI-FOtrUVORQg40Dy2gfQ" target="_blank">유튜브 채널</a>
         </div><!-- .title end -->
     </section><!-- .main_visual end -->
 
@@ -68,11 +68,11 @@
                 <p>제작목적, 컨셉트 2줄정도</p>
                 <dl>
                     <dt>프로그램</dt>
-                    <dd>마야, 에프터 이펙트</dd>
+                    <dd>마야, 에프터이펙트</dd>
                 </dl>
                 <dl>
                     <dt>배경음악</dt>
-                    <dd>사용한 음악 제목 - 가수</dd>
+                    <dd>저작권 없는 무료 음악</dd>
                 </dl>
                 <dl>
                     <dt>러닝 타임</dt>
@@ -80,7 +80,7 @@
                 </dl>
                 <ul>
                     <li>
-                        <a href="#" target="_blank">유튜브 이동하기</a>
+                        <a href="https://www.youtube.com/watch?v=keIBaNDCc7A" target="_blank">유튜브 이동하기</a>
                     </li>
                     <li>
                         <a href="#" target="_blank">기획서 보기</a>
@@ -96,39 +96,40 @@
             <p>비디오, 애니메이션 기술을 이용한 영상제작</p>
         </div><!-- .title end -->
         <ul class="list">
-            <li class="on">게임</li>
-            <li>흥보영상</li>
+            <li class="on">모션 그래픽</li>
+            <li>3D 그래픽</li>
             <li>인포그래픽</li>
             <li>브이로그</li>
-            <li>뮤비티저</li>
+            <li>타이틀시퀀스</li>
+            <li>사운드 디자인</li>
         </ul><!-- .list end -->
         <div class="motion_cont">
-            <div class="list_cont on"> <!-- 게임 -->
+            <div class="list_cont on"> <!-- 모션그래픽 -->
                 <div class="items">
                     <div class="youtube">
                         <div class="youtube_in">
                             <!-- 유튜브 연결 -->
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/zGt-1A5Vi5c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Av7PzQou0dI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div><!-- .youtube_in end -->
                     </div><!-- .youtube end -->
                     <div class="info">
-                        <p>각본, 연출, 촬영, 편집, 보정, 특수효과</p>
-                        <h4>목마른 아르마딜로 도와줬더니...</h4>
+                        <p>디자인, 연출, 편집, 보정, 특수효과</p>
+                        <h4>사과파이 요리레시피</h4>
                         <dl>
                             <dt>프로그램</dt>
-                            <dd>Premiere Pro, After Effects</dd>
+                            <dd>일러스트, 애프터이펙트</dd>
                         </dl>
                         <dl>
                             <dt>러닝타임</dt>
-                            <dd>00:01:58</dd>
+                            <dd>00:00:44</dd>
                         </dl>
                         <dl>
                             <dt>배경음악</dt>
-                            <dd></dd>
+                            <dd>저작권 없는 무료 음악</dd>
                         </dl>
                         <dl>
                             <dt>URL 주소</dt>
-                            <dd><a href="https://www.youtube.com/watch?v=zGt-1A5Vi5c">https://www.youtube.com/watch?v=zGt-1A5Vi5c</a></dd>
+                            <dd><a href="https://www.youtube.com/watch?v=Av7PzQou0dI" target="_blank">https://www.youtube.com/watch?v=Av7PzQou0dI</a></dd>
                         </dl>
                     </div><!-- .info end -->
                 </div><!-- .items end 1 -->
@@ -136,91 +137,62 @@
                     <div class="youtube">
                         <div class="youtube_in">
                             <!-- 유튜브 연결 -->
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/zGt-1A5Vi5c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/J2ZgUfi7Ou0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div><!-- .youtube_in end -->
                     </div><!-- .youtube end -->
                     <div class="info">
-                        <p>각본, 연출, 촬영, 편집, 보정, 특수효과</p>
-                        <h4>목마른 아르마딜로 도와줬더니...</h4>
+                        <p>연출, 편집, 보정, 특수효과</p>
+                        <h4>사용가능한 프로그램들 소개</h4>
                         <dl>
                             <dt>프로그램</dt>
                             <dd>Premiere Pro, After Effects</dd>
                         </dl>
                         <dl>
                             <dt>러닝타임</dt>
-                            <dd>00:01:58</dd>
+                            <dd>00:00:30</dd>
                         </dl>
                         <dl>
                             <dt>배경음악</dt>
-                            <dd></dd>
+                            <dd>저작권 없는 무료 사용가능 음악</dd>
                         </dl>
                         <dl>
                             <dt>URL 주소</dt>
-                            <dd><a href="https://www.youtube.com/watch?v=zGt-1A5Vi5c">영상보기</a></dd>
+                            <dd><a href="https://www.youtube.com/watch?v=J2ZgUfi7Ou0" target="_blank">https://www.youtube.com/watch?v=J2ZgUfi7Ou0</a></dd>
                         </dl>
                     </div><!-- .info end -->
                 </div><!-- .items end 2 -->
-            </div><!-- .list_cont end 게임 -->
+            </div><!-- .list_cont end 모션그래픽 -->
 
-            <div class="list_cont"> <!-- 흥보영상 -->
+            <div class="list_cont"> <!-- 3D 그래픽 -->
                 <div class="items">
                     <div class="youtube">
                         <div class="youtube_in">
                             <!-- 유튜브 연결 -->
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/ein_en7BwlE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/keIBaNDCc7A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div><!-- .youtube_in end -->
                     </div><!-- .youtube end -->
                     <div class="info">
-                        <p>각본, 연출, 촬영, 편집, 보정, 특수효과</p>
-                        <h4>목마른 아르마딜로 도와줬더니...</h4>
+                        <p>편집, 연출, 디자인</p>
+                        <h4>3D 그래픽_영상고지 영상</h4>
                         <dl>
                             <dt>프로그램</dt>
-                            <dd>Premiere Pro, After Effects</dd>
+                            <dd>마야, After Effects</dd>
                         </dl>
                         <dl>
                             <dt>러닝타임</dt>
-                            <dd>00:01:58</dd>
+                            <dd>00:00:10</dd>
                         </dl>
                         <dl>
                             <dt>배경음악</dt>
-                            <dd></dd>
+                            <dd>저작권 없는 무료 음악</dd>
                         </dl>
                         <dl>
                             <dt>URL 주소</dt>
-                            <dd><a href="https://www.youtube.com/watch?v=ein_en7BwlE">영상보기</a></dd>
+                            <dd><a href="https://www.youtube.com/watch?v=keIBaNDCc7A" target="_blank">https://www.youtube.com/watch?v=keIBaNDCc7A</a></dd>
                         </dl>
                     </div><!-- .info end -->
                 </div><!-- .items end 1 -->
-                <div class="items">
-                    <div class="youtube">
-                        <div class="youtube_in">
-                            <!-- 유튜브 연결 -->
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/ein_en7BwlE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div><!-- .youtube_in end -->
-                    </div><!-- .youtube end -->
-                    <div class="info">
-                        <p>각본, 연출, 촬영, 편집, 보정, 특수효과</p>
-                        <h4>목마른 아르마딜로 도와줬더니...</h4>
-                        <dl>
-                            <dt>프로그램</dt>
-                            <dd>Premiere Pro, After Effects</dd>
-                        </dl>
-                        <dl>
-                            <dt>러닝타임</dt>
-                            <dd>00:01:58</dd>
-                        </dl>
-                        <dl>
-                            <dt>배경음악</dt>
-                            <dd></dd>
-                        </dl>
-                        <dl>
-                            <dt>URL 주소</dt>
-                            <dd><a href="https://www.youtube.com/watch?v=ein_en7BwlE">영상보기</a></dd>
-                        </dl>
-                    </div><!-- .info end -->
-                </div><!-- .items end 2 -->
-
-            </div><!-- .list_cont end 흥보영상 -->
+            </div><!-- .list_cont end 3D 그래픽 -->
 
         </div><!-- .motion_cont end -->
     </section><!-- .motion end -->
@@ -256,9 +228,6 @@
 
     <section class="about">
         <div class="cont">
-            <figure>
-                <img src="http://via.placeholder.com/450X500/?text=face" alt="" />
-            </figure>
             <div class="info">
                 <div>
                     <h4>PROFILE</h4>
@@ -304,7 +273,7 @@
     <footer>
         <h3>구화정 GU HWA JEONG</h3>
         <ul>
-            <li><a href="#">유튜브 채널</a></li>
+            <li><a href="https://www.youtube.com/channel/UCmUI-FOtrUVORQg40Dy2gfQ" target="_blank">유튜브 채널</a></li>
             <li><a href="tel:#">연락처</a></li>
             <li>카카오톡 아이디또는 이메일 주소</li>
         </ul>
