--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>구화정 포토폴리오</title>
     
+    <!-- xeicon https://xpressengine.github.io/XEIcon/started.html -->
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+
     <!-- 팬시박스 css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css" integrity="sha512-nNlU0WK2QfKsuEmdcTwkeh+lhGs6uyOxuUs+n+0oXSYDok5qy0EI0lt01ZynHq6+p/tbgpZ7P+yUb+r71wqdXg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -65,7 +68,7 @@
     <header>
         <div>
             <h1>
-                <a href="https://hwajeongportpolio.github.io/portfolio/">GUHWAJEONG</a>
+                <a href="https://hwajeongportpolio.github.io/portfolio/"><i class="xi-home"></i>GUHWAJEONG</a>
             </h1>
         </div>                
     </header>
@@ -79,7 +82,7 @@
             <div class=" animate__animated animate__bounceInLeft">
                 <h2>MOTION GRAPHIC DESINGER</h2>
                 <p>Gu Hwa Jeong</p>
-                <a href="https://www.youtube.com/channel/UCmUI-FOtrUVORQg40Dy2gfQ" target="_blank">유튜브 채널</a>
+                <a href="https://www.youtube.com/channel/UCmUI-FOtrUVORQg40Dy2gfQ" target="_blank">유튜브 채널 <i class="xi-youtube-play"></i></a>
             </div>
         </div><!-- .title end -->
     </section><!-- .main_visual end -->
@@ -99,8 +102,8 @@
             <div class="info" data-aos="fade-left";>
                 <strong data-aos="fade-left">3D GRAPHIC</strong>
                 <h4 data-aos="fade-left">3D 그래픽_영상고지 영상</h4>
-                <p data-aos="fade-left">편집, 연출, 디자인</p>
-                <p data-aos="fade-left">마야를 이용해서     영상고지 영상을 만들고, 물체가 하나씩 등장하면서 모두 다 나왔을 때 화면이 회전과 확대가 되면서 글이 나오게 표현하였다.</p>
+                <p data-aos="fade-left"><i class="xi-label"></i> 편집, 연출, 디자인</p>
+                <p data-aos="fade-left">마야를 이용해서 영상고지 영상을 만들고, 물체가 하나씩 등장하면서 모두 다 나왔을 때 화면이 회전과 확대가 되면서 글이 나오게 표현하였다.</p>
                 <dl data-aos="fade-left">
                     <dt>프로그램</dt>
                     <dd>Maya, After Effects</dd>
@@ -115,7 +118,7 @@
                 </dl>
                 <ul data-aos="fade-left">
                     <li data-aos="fade-left">
-                        <a href="https://www.youtube.com/watch?v=keIBaNDCc7A" target="_blank">유튜브 이동하기</a>
+                        <a href="https://www.youtube.com/watch?v=keIBaNDCc7A" target="_blank">유튜브 이동하기 <i class="xi-youtube-play"></i></a>
                     </li>
                 </ul>
             </div> <!-- .info end -->
@@ -145,7 +148,7 @@
                         </div><!-- .youtube_in end -->
                     </div><!-- .youtube end -->
                     <div class="info" data-aos="fade-down">
-                        <p>디자인, 연출, 편집, 보정, 특수효과</p>
+                        <p><i class="xi-label"></i> 디자인, 연출, 편집, 보정, 특수효과</p>
                         <h4>사과파이 요리레시피</h4>
                         <dl data-aos="fade-down">
                             <dt>프로그램</dt>
@@ -173,7 +176,7 @@
                         </div><!-- .youtube_in end -->
                     </div><!-- .youtube end -->
                     <div class="info" data-aos="fade-down">
-                        <p data-aos="fade-down">연출, 편집, 보정, 특수효과</p>
+                        <p data-aos="fade-down"><i class="xi-label"></i> 연출, 편집, 보정, 특수효과</p>
                         <h4 data-aos="fade-down">사용가능한 프로그램들 소개</h4>
                         <dl data-aos="fade-down">
                             <dt>프로그램</dt>
@@ -204,7 +207,7 @@
                         </div><!-- .youtube_in end -->
                     </div><!-- .youtube end -->
                     <div class="info">
-                        <p>편집, 연출, 디자인</p>
+                        <p><i class="xi-label"></i> 편집, 연출, 디자인</p>
                         <h4>3D 그래픽_영상고지 영상</h4>
                         <dl>
                             <dt>프로그램</dt>
@@ -235,7 +238,7 @@
                         </div><!-- .youtube_in end -->
                     </div><!-- .youtube end -->
                     <div class="info">
-                        <p>디자인, 연출, 편집, 보정, 특수효과</p>
+                        <p><i class="xi-label"></i> 디자인, 연출, 편집, 보정, 특수효과</p>
                         <h4>사과파이 요리레시피</h4>
                         <dl>
                             <dt>프로그램</dt>
@@ -266,7 +269,7 @@
                         </div><!-- .youtube_in end -->
                     </div><!-- .youtube end -->
                     <div class="info">
-                        <p>촬영, 연출, 편집, 보정, 특수효과</p>
+                        <p><i class="xi-label"></i> 촬영, 연출, 편집, 보정, 특수효과</p>
                         <h4>부산 여행 브이로그</h4>
                         <dl>
                             <dt>프로그램</dt>
@@ -297,7 +300,7 @@
                         </div><!-- .youtube_in end -->
                     </div><!-- .youtube end -->
                     <div class="info">
-                        <p>연출, 편집, 보정, 특수효과</p>
+                        <p><i class="xi-label"></i> 연출, 편집, 보정, 특수효과</p>
                         <h4>실종 느와르M 타이틀 시퀀스</h4>
                         <dl>
                             <dt>프로그램</dt>
@@ -328,7 +331,7 @@
                         </div><!-- .youtube_in end -->
                     </div><!-- .youtube end -->
                     <div class="info">
-                        <p>촬영, 연출, 편집, 보정, 특수효과</p>
+                        <p><i class="xi-label"></i> 촬영, 연출, 편집, 보정, 특수효과</p>
                         <h4>언박싱 영상 (책소개) _ 사운드 디자인</h4>
                         <dl>
                             <dt>프로그램</dt>
@@ -416,10 +419,10 @@
         <div class="cont">
             <div class="info">
                 <div>
-                    <h4>PROFILE</h4>
+                    <h4><i class="xi-profile"></i>PROFILE</h4>
                     <p>구화정 / Gu Hwa Jeong</p>
                     <p>1997.08.15</p>
-                    <p><a href="tel:#">010.9509.3183</a></p>
+                    <p><a href="tel:01095093183"><i class="xi-call"></i>010.9509.3183</a></p>
                     <p>부산광역시 해운대구</p>
                 </div>
                 <div>
@@ -459,9 +462,11 @@
     <footer>
         <h3>구화정 GU HWA JEONG</h3>
         <ul>
-            <li><a href="https://www.youtube.com/channel/UCmUI-FOtrUVORQg40Dy2gfQ" target="_blank">유튜브 채널</a></li>
-            <li><a href="tel:01095093183">연락처</a></li>
-            <li>vksnfvksnf54@naver.com</li>
+            <li><a href="https://www.youtube.com/channel/UCmUI-FOtrUVORQg40Dy2gfQ" target="_blank">유튜브 채널 <i class="xi-youtube-play"></i></a></li>
+
+            <li><a href="tel:01095093183"><i class="xi-call"></i> 연락처</a></li>
+
+            <li><i class="xi-mail-o"></i> vksnfvksnf54@naver.com</li>
         </ul>
         <p>copyright 2022. 구화정 all rights reserved.<br />본 사이트는 개인 포토폴리오 사이트로 제작되어 상업적 목적이 아닙니다. 사용된 일부 이미지 및 폰트 등은 별도의 출처가 있음을 밝혀 드립니다.</p>
     </footer>
