--- a/index.html
+++ b/index.html
@@ -61,7 +61,20 @@
             src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2202-2@1.0/SuncheonB.woff') format('woff');
             font-weight: normal;
             font-style: normal;
-        }    
+        }
+        @font-face {
+            font-family: 'Cafe24Ssurround';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+        @font-face {
+            font-family: 'paybooc-Bold';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/paybooc-Bold.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+    
     </style>
 </head>
 <body>
@@ -196,6 +209,34 @@
                         </dl>
                     </div><!-- .info end -->
                 </div><!-- .items end 2 -->
+                <div class="items">
+                    <div class="youtube">
+                        <div class="youtube_in">
+                            <!-- 유튜브 연결 -->
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/JjZ2UIIlEe8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div><!-- .youtube_in end -->
+                    </div><!-- .youtube end -->
+                    <div class="info" data-aos="fade-down">
+                        <p data-aos="fade-down"><i class="xi-label"></i> 연출, 편집, 보정, 특수효과</p>
+                        <h4 data-aos="fade-down">명언소개</h4>
+                        <dl data-aos="fade-down">
+                            <dt>프로그램</dt>
+                            <dd>Premiere Pro, After Effects</dd>
+                        </dl>
+                        <dl data-aos="fade-down">
+                            <dt>러닝타임</dt>
+                            <dd>00:00:35</dd>
+                        </dl>
+                        <dl data-aos="fade-down">
+                            <dt>배경음악</dt>
+                            <dd> HYP - Catch Me If You Can<br/>그 외의 음악은 저작권없는 무료 음악</dd>
+                        </dl>
+                        <dl data-aos="fade-down">
+                            <dt>URL 주소</dt>
+                            <dd><a href="https://www.youtube.com/watch?v=JjZ2UIIlEe8" target="_blank">https://www.youtube.com/watch?v=JjZ2UIIlEe8</a></dd>
+                        </dl>
+                    </div><!-- .info end -->
+                </div><!-- .items end 3 -->
             </div><!-- .list_cont end 모션그래픽 -->
 
             <div class="list_cont"> <!-- 3D 그래픽 -->
@@ -258,6 +299,34 @@
                         </dl>
                     </div><!-- .info end -->
                 </div><!-- .items end 1 -->
+                <div class="items">
+                    <div class="youtube">
+                        <div class="youtube_in">
+                            <!-- 유튜브 연결 -->
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/JjZ2UIIlEe8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div><!-- .youtube_in end -->
+                    </div><!-- .youtube end -->
+                    <div class="info" data-aos="fade-down">
+                        <p data-aos="fade-down"><i class="xi-label"></i> 연출, 편집, 보정, 특수효과</p>
+                        <h4 data-aos="fade-down">명언소개</h4>
+                        <dl data-aos="fade-down">
+                            <dt>프로그램</dt>
+                            <dd>Premiere Pro, After Effects</dd>
+                        </dl>
+                        <dl data-aos="fade-down">
+                            <dt>러닝타임</dt>
+                            <dd>00:00:35</dd>
+                        </dl>
+                        <dl data-aos="fade-down">
+                            <dt>배경음악</dt>
+                            <dd> HYP - Catch Me If You Can<br/>그 외의 음악은 저작권없는 무료 음악</dd>
+                        </dl>
+                        <dl data-aos="fade-down">
+                            <dt>URL 주소</dt>
+                            <dd><a href="https://www.youtube.com/watch?v=JjZ2UIIlEe8" target="_blank">https://www.youtube.com/watch?v=JjZ2UIIlEe8</a></dd>
+                        </dl>
+                    </div><!-- .info end -->
+                </div><!-- .items end 2 -->
             </div><!-- .list_cont end 인포그래픽 -->
 
             <div class="list_cont"> <!-- 브이로그 -->
