--- a/index.html
+++ b/index.html
@@ -63,18 +63,23 @@
             font-style: normal;
         }
         @font-face {
-            font-family: 'Cafe24Ssurround';
-            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff') format('woff');
-            font-weight: normal;
-            font-style: normal;
-        }
-        @font-face {
             font-family: 'paybooc-Bold';
             src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/paybooc-Bold.woff') format('woff');
             font-weight: normal;
             font-style: normal;
         }
-    
+        @font-face {
+            font-family: '-KITA-Regular';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/-KITA-Regular.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+        @font-face {
+            font-family: 'BMJUA';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMJUA.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
     </style>
 </head>
 <body>
@@ -115,7 +120,7 @@
             <div class="info" data-aos="fade-left";>
                 <strong data-aos="fade-left">3D GRAPHIC</strong>
                 <h4 data-aos="fade-left">3D 그래픽_영상고지 영상</h4>
-                <p data-aos="fade-left"><i class="xi-label"></i> 편집, 연출, 디자인</p>
+                <p data-aos="fade-left">편집, 연출, 디자인</p>
                 <p data-aos="fade-left">마야를 이용해서 영상고지 영상을 만들고, 물체가 하나씩 등장하면서 모두 다 나왔을 때 화면이 회전과 확대가 되면서 글이 나오게 표현하였다.</p>
                 <dl data-aos="fade-left">
                     <dt>프로그램</dt>
@@ -488,21 +493,21 @@
         <div class="cont">
             <div class="info">
                 <div>
-                    <h4><i class="xi-profile"></i>PROFILE</h4>
+                    <h4><i class="xi-profile"></i> PROFILE</h4>
                     <p>구화정 / Gu Hwa Jeong</p>
                     <p>1997.08.15</p>
-                    <p><a href="tel:01095093183"><i class="xi-call"></i>010.9509.3183</a></p>
+                    <p><a href="tel:01095093183">010.9509.3183</a></p>
                     <p>부산광역시 해운대구</p>
                 </div>
                 <div>
-                    <h4>EDUCATION</h4>
+                    <h4><i class="xi-school"></i> EDUCATION</h4>
                     <dl>
                         <dt>2021.12 ~ 2022.05</dt>
                         <dd>그린컴퓨터아카데미<br />[멀티미디어 콘텐츠 제작]<br />영상편집 수료</dd>
                     </dl>
                 </div>
                 <div>
-                    <h4>LICENSE</h4>
+                    <h4><i class="xi-book"></i> LICENSE</h4>
                     <dl>
                         <dt>2021.06</dt>
                         <dd>수질환경산업기사</dd>
@@ -517,7 +522,7 @@
                     </dl>
                 </div>
                 <div>
-                    <h4>SKILL</h4>
+                    <h4><i class="xi-library"></i> SKILL</h4>
                     <p>애프터 이펙트, 프리미어 프로</p>
                     <p>포토샵, 일러스트</p>
                     <p>마야</p>
@@ -531,7 +536,7 @@
     <footer>
         <h3>구화정 GU HWA JEONG</h3>
         <ul>
-            <li><a href="https://www.youtube.com/channel/UCmUI-FOtrUVORQg40Dy2gfQ" target="_blank">유튜브 채널 <i class="xi-youtube-play"></i></a></li>
+            <li><a href="https://www.youtube.com/channel/UCmUI-FOtrUVORQg40Dy2gfQ" target="_blank"><i class="xi-youtube-play"></i> 유튜브 채널 </a></li>
 
             <li><a href="tel:01095093183"><i class="xi-call"></i> 연락처</a></li>
 
