--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <li class="on">모션 그래픽</li>
             <li>3D 그래픽</li>
             <li>인포그래픽</li>
-            <li>브이로그</li>
+            <li>종합편집</li>
             <li>타이틀시퀀스</li>
             <li>사운드 디자인</li>
         </ul><!-- .list end -->
@@ -242,6 +242,34 @@
                         </dl>
                     </div><!-- .info end -->
                 </div><!-- .items end 3 -->
+                <div class="items">
+                    <div class="youtube">
+                        <div class="youtube_in">
+                            <!-- 유튜브 연결 -->
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/JfxiZZ5LYOE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div><!-- .youtube_in end -->
+                    </div><!-- .youtube end -->
+                    <div class="info" data-aos="fade-down">
+                        <p data-aos="fade-down"><i class="xi-label"></i> 연출, 편집, 보정, 특수효과</p>
+                        <h4 data-aos="fade-down">팝업카드_3D 모션그래픽</h4>
+                        <dl data-aos="fade-down">
+                            <dt>프로그램</dt>
+                            <dd>Premiere Pro, After Effects</dd>
+                        </dl>
+                        <dl data-aos="fade-down">
+                            <dt>러닝타임</dt>
+                            <dd>00:00:07</dd>
+                        </dl>
+                        <dl data-aos="fade-down">
+                            <dt>배경음악</dt>
+                            <dd>저작권없는 무료 음악</dd>
+                        </dl>
+                        <dl data-aos="fade-down">
+                            <dt>URL 주소</dt>
+                            <dd><a href="https://www.youtube.com/watch?v=JfxiZZ5LYOE" target="_blank">https://www.youtube.com/watch?v=JfxiZZ5LYOE</a></dd>
+                        </dl>
+                    </div><!-- .info end -->
+                </div><!-- .items end 4 -->
             </div><!-- .list_cont end 모션그래픽 -->
 
             <div class="list_cont"> <!-- 3D 그래픽 -->
@@ -273,6 +301,34 @@
                         </dl>
                     </div><!-- .info end -->
                 </div><!-- .items end 1 -->
+                <div class="items">
+                    <div class="youtube">
+                        <div class="youtube_in">
+                            <!-- 유튜브 연결 -->
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/JfxiZZ5LYOE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div><!-- .youtube_in end -->
+                    </div><!-- .youtube end -->
+                    <div class="info" data-aos="fade-down">
+                        <p data-aos="fade-down"><i class="xi-label"></i> 연출, 편집, 보정, 특수효과</p>
+                        <h4 data-aos="fade-down">팝업카드_3D 모션그래픽</h4>
+                        <dl data-aos="fade-down">
+                            <dt>프로그램</dt>
+                            <dd>Premiere Pro, After Effects</dd>
+                        </dl>
+                        <dl data-aos="fade-down">
+                            <dt>러닝타임</dt>
+                            <dd>00:00:07</dd>
+                        </dl>
+                        <dl data-aos="fade-down">
+                            <dt>배경음악</dt>
+                            <dd>저작권없는 무료 음악</dd>
+                        </dl>
+                        <dl data-aos="fade-down">
+                            <dt>URL 주소</dt>
+                            <dd><a href="https://www.youtube.com/watch?v=JfxiZZ5LYOE" target="_blank">https://www.youtube.com/watch?v=JfxiZZ5LYOE</a></dd>
+                        </dl>
+                    </div><!-- .info end -->
+                </div><!-- .items end 2 -->
             </div><!-- .list_cont end 3D 그래픽 -->
 
             <div class="list_cont"> <!-- 인포그래픽 -->
@@ -334,7 +390,7 @@
                 </div><!-- .items end 2 -->
             </div><!-- .list_cont end 인포그래픽 -->
 
-            <div class="list_cont"> <!-- 브이로그 -->
+            <div class="list_cont"> <!-- 종합편집 -->
                 <div class="items">
                     <div class="youtube">
                         <div class="youtube_in">
@@ -363,7 +419,64 @@
                         </dl>
                     </div><!-- .info end -->
                 </div><!-- .items end 1 -->
-            </div><!-- .list_cont end 브이로그 -->
+                <div class="items">
+                    <div class="youtube">
+                        <div class="youtube_in">
+                            <!-- 유튜브 연결 -->
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Wh_KtEQpUxw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div><!-- .youtube_in end -->
+                    </div><!-- .youtube end -->
+                    <div class="info">
+                        <p><i class="xi-label"></i>연출, 편집, 보정, 특수효과</p>
+                        <h4>종합 편집</h4>
+                        <dl>
+                            <dt>프로그램</dt>
+                            <dd>Premiere Pro</dd>
+                        </dl>
+                        <dl>
+                            <dt>러닝타임</dt>
+                            <dd>00:00:11</dd>
+                        </dl>
+                        <dl>
+                            <dt>배경음악</dt>
+                            <dd>유튜브 무료 음원</dd>
+                        </dl>
+                        <dl>
+                            <dt>URL 주소</dt>
+                            <dd><a href="https://www.youtube.com/watch?v=Wh_KtEQpUxw" target="_blank">https://www.youtube.com/watch?v=Wh_KtEQpUxw</a></dd>
+                        </dl>
+                    </div><!-- .info end -->
+                </div><!-- .items end 2 -->
+                <div class="items">
+                    <div class="youtube">
+                        <div class="youtube_in">
+                            <!-- 유튜브 연결 -->
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/wfJm6iBLxvg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div><!-- .youtube_in end -->
+                    </div><!-- .youtube end -->
+                    <div class="info">
+                        <p><i class="xi-label"></i>연출, 편집, 보정, 특수효과</p>
+                        <h4>디지털 느낌 영상_종합편집</h4>
+                        <dl>
+                            <dt>프로그램</dt>
+                            <dd>Premiere Pro, After Effects</dd>
+                        </dl>
+                        <dl>
+                            <dt>러닝타임</dt>
+                            <dd>00:00:10</dd>
+                        </dl>
+                        <dl>
+                            <dt>배경음악</dt>
+                            <dd>유튜브 무료 음원</dd>
+                        </dl>
+                        <dl>
+                            <dt>URL 주소</dt>
+                            <dd><a href="https://www.youtube.com/watch?v=wfJm6iBLxvg" target="_blank">https://www.youtube.com/watch?v=wfJm6iBLxvg</a></dd>
+                        </dl>
+                    </div><!-- .info end -->
+                </div><!-- .items end 3 -->
+
+            </div><!-- .list_cont end 종합편집 -->
 
             <div class="list_cont"> <!-- 타이틀시퀀스 -->
                 <div class="items">
